--- a/SkillCapper.csproj
+++ b/SkillCapper.csproj
@@ -81,6 +81,9 @@
         <Reference Include="UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
           <HintPath>$(GamePath)\unstripped_corlib\UnityEngine.CoreModule.dll</HintPath>
         </Reference>
+        <Reference Include="UnityEngine.UI, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
+          <HintPath>$(GamePath)\unstripped_corlib\UnityEngine.UI.dll</HintPath>
+        </Reference>
         <Reference Include="YamlDotNet, Version=11.0.0.0, Culture=neutral, PublicKeyToken=ec19458f3c15af5e">
           <HintPath>packages\YamlDotNet.11.2.1\lib\net45\YamlDotNet.dll</HintPath>
           <Private>True</Private>
@@ -90,6 +93,7 @@
         <Compile Include="SkillCapper.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="SkillConfig.cs" />
+        <Compile Include="VersionHandshake.cs" />
     </ItemGroup>
     <ItemGroup>
       <None Include="packages.config" />
